Ingress/my-nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mynginx-service
spec:
  selector:
    app: nginx-test
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
status:
  loadBalancer: {}
