Ingress/my-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynginx-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: my.example.ml
    http:
      paths:
      - pathType: Prefix
        path: /app
        backend:
          service:
            name: mynginx-service
            port: 
              number: 80
